# editorconfig-checker.python

./: .flake8  .gitignore  .pre-commit-hooks.yaml  Dockerfile  LICENSE  Makefile  README.md  publish.sh  requirements.txt  run-tests.sh  setup.cfg  setup.py  test.sh  update-binaries.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml
editorconfig_checker/: __init__.py  __main__.py  wrapper.py
src/editorconfig_checker/: __init__.py  cli.py
tests/: Dockerfile.template
