[metadata]
name = editorconfig_checker
description = Python wrapper around invoking editorconfig-checker (https://github.com/editorconfig-checker/editorconfig-checker)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/editorconfig-checker/editorconfig-checker.python
author = Marco M.
author_email = mmicu.github00@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Text Processing
    Topic :: Utilities

[options]
python_requires = >=2.7
